# Reliable-Data-Transfer-Protocol

./: LICENSE  Protocol design  README.md  client.py  client2.py  client3.py  client4.py  clientNoPrint.py  connection.drawio  packet.py  pyproject.toml  receiver.py  receiverNoPrint.py  sender.py  senderNoPrint.py  senderTest.py  server.py  server2.py  server3.py  server4.py  serverNoPrint.py  util.py
capture&figure/: dog.pcapng  doge1.pcapng  testHTML.pcapng
serverStorage/: a.pages
src/reliable-data-transfer-protocol/: server.py  util.py
src/reliable-data-transfer-protocol/serverStorage/: test.html
