[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reliable-data-transfer-protocol"
version = "0.0.1"
authors = [
  { name="Cole Wu" },
  { name="Ross Shen" },
]
description = "A UDP file transfer protocol providing reliability, flow control and congestion control."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Cole9712/Reliable-Data-Transfer-Protocol"
Issues = "https://github.com/Cole9712/Reliable-Data-Transfer-Protocol/issues"

[tool.hatch.build.targets.wheel]
packages = [
	"src/reliable-data-transfer-protocol"
]
